--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kokorozashi</title>
+
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Owl Carousel CSS -->
     <link
@@ -14,52 +15,234 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
     />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Hero Banner -->
     <section class="hero">
       <div class="overlay"></div>
-
       <div class="content">
         <p class="subtitle">Human Capital Infrastructure for Japan</p>
-
         <h1>
           人を育て、<br />
           現場を未来へ。
         </h1>
-
         <p class="description">
           日本の人材課題を、「採用」ではなく「仕組み」で解決する。
           持続可能な現場を構築する唯一のインフラ。
         </p>
-
         <div class="buttons">
-          <button class="primary-btn">無料相談を予約する</button>
+          <button class="primary-btn banner-btn">無料相談を予約する</button>
           <button class="secondary-btn">BOOTCAMP動画を見る</button>
         </div>
       </div>
     </section>
-    <!-- Hero Banner -->
 
     <!-- Brand Carousel -->
     <section class="brand-section">
-        <div class="owl-carousel brand-carousel">
-          <div class="item"><img src="./assets/img/b1.png" alt="Brand 1"></div>
-          <div class="item"><img src="./assets/img/b2.png" alt="Brand 2"></div>
-          <div class="item"><img src="./assets/img/b3.png" alt="Brand 3"></div>
-          <div class="item"><img src="./assets/img/b4.png" alt="Brand 4"></div>
-          <div class="item"><img src="./assets/img/b5.png" alt="Brand 5"></div>
+      <div class="owl-carousel brand-carousel">
+        <div class="item"><img src="./assets/img/b1.png" alt="Brand 1" /></div>
+        <div class="item"><img src="./assets/img/b2.png" alt="Brand 2" /></div>
+        <div class="item"><img src="./assets/img/b3.png" alt="Brand 3" /></div>
+        <div class="item"><img src="./assets/img/b4.png" alt="Brand 4" /></div>
+        <div class="item"><img src="./assets/img/b5.png" alt="Brand 5" /></div>
+      </div>
+    </section>
+
+    <!-- Crisis Section -->
+    <section class="crisis-section py-5">
+      <div class="container">
+        <div class="sub-head">
+          <div class="mb-2 text-danger fw-bold">CRISIS</div>
+          <h2 class="fw-bold mb-4 crisis-heading">採用は、もう限界です。</h2>
         </div>
-      </section>
-    <!-- Brand Carousel -->
 
-    <!-- jQuery -->
+        <div class="mx-auto crisis-box-wrapper">
+          <div class="bg-dark text-white rounded-4 p-4 p-md-5">
+            <p class="text-center mb-4">
+              探す、入れる、辞める。この「負のループ」を断ち切る。
+            </p>
+
+            <div class="d-flex justify-content-center gap-3 flex-wrap mb-4">
+              <span class="badge bg-white text-dark rounded-pill px-4 py-4 fs-2"
+                >探す</span
+              >
+              <span class="badge bg-white text-dark rounded-pill px-4 py-4 fs-2"
+                >入れる</span
+              >
+              <span
+                class="badge bg-white text-danger rounded-pill px-4 py-4 fs-2"
+                >辞める</span
+              >
+              <span class="badge bg-white text-dark rounded-pill px-4 py-4 fs-2"
+                >また探す</span
+              >
+            </div>
+
+            <p class="text-center text-white mb-0">
+              問題は人ではなく、「仕組み」の欠如です。
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- shift section -->
+    <section class="shift-section">
+      <div class="container">
+        <!-- Sub Head -->
+        <div class="sub-head mb-2">
+          <div class="mb-2 text-danger fw-bold">SHIFT</div>
+          <h2 class="fw-bold mb-4 shift-heading">採用から、「人材基盤」へ。</h2>
+        </div>
+
+        <!-- Description -->
+        <p class="text-muted mb-5">
+          企業は事業に集中。人の仕組みはKOKOROZASHIが引き受けます。
+        </p>
+
+        <!-- Flow Box -->
+        <div class="mx-auto shift-box-wrapper">
+          <div class="bg-white rounded-4 shadow p-4 p-md-5">
+            <div
+              class="d-flex align-items-center justify-content-between flex-wrap flex-lg-nowrap gap-3"
+            >
+              <div class="shift-circle">育成</div>
+              <img
+                src="assets/img/arrow-right.svg"
+                alt="arrow"
+                class="shift-arrow-img"
+              />
+
+              <div class="shift-circle">配置</div>
+              <img
+                src="assets/img/arrow-right.svg"
+                alt="arrow"
+                class="shift-arrow-img"
+              />
+
+              <div class="shift-circle">定着</div>
+              <img
+                src="assets/img/arrow-right.svg"
+                alt="arrow"
+                class="shift-arrow-img"
+              />
+
+              <div class="shift-circle">成長</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Founder Section -->
+    <section class="founder-section">
+      <div class="container">
+        <!-- Sub Head -->
+        <div class="sub-head mb-2">
+          <div class="mb-2 text-danger fw-bold">Our Ceo</div>
+          <h2 class="fw-bold mb-4 shift-heading">代表</h2>
+        </div>
+        <div class="row align-items-start">
+          <!-- LEFT -->
+          <div class="col-lg-5">
+            <img
+              src="./assets/img//founder.jpg"
+              alt="Founder"
+              class="profile-img"
+            />
+
+            <div class="founder-label">創業者</div>
+            <div class="founder-name">シャラド・ライ</div>
+
+            <p class="founder-desc">
+              東京大学大学院修士課程修了。博士課程在籍。<br />
+              ソフトバンク株式会社 新規事業推進室にて、
+              日本および海外スタートアップと連携し、 先端プロジェクトを推進。
+            </p>
+          </div>
+
+          <!-- RIGHT -->
+          <div class="col-lg-7">
+            <div class="media-box">
+              <div class="media-title">メディア連載</div>
+
+              <div class="media-item">
+                <div class="media-text">
+                  NHK WORLD JAPANのインタビューでは、
+                  グローバルな視点から日本市場の可能性や、
+                  海外人材と日本企業をつなぐ取り組みについて語りました。
+                </div>
+                <div class="media-logo logo-nhk">
+                  <img
+                    src="./assets/img/media1.png"
+                    alt="NIKKEI"
+                    class="media-logo-img"
+                  />
+                </div>
+              </div>
+
+              <div class="media-item">
+                <div class="media-text">
+                  日本経済新聞では、当社の経営戦略や
+                  中長期的なビジョン、人材を仕組みとして
+                  育成する考え方について紹介されました。
+                </div>
+                <div class="media-logo logo-nikkei">
+                  <img
+                    src="./assets/img/media2.svg"
+                    alt="NIKKEI"
+                    class="media-logo-img"
+                  />
+                </div>
+              </div>
+
+              <div class="media-item">
+                <div class="media-text">
+                  TBSの取材では、現場に根ざした事業の取り組みや、
+                  社会課題に向き合う企業としての姿勢について語りました。
+                </div>
+                <div class="media-logo logo-tbs">
+                  <img
+                    src="./assets/img/media3.png"
+                    alt="NIKKEI"
+                    class="media-logo-img"
+                  />
+                </div>
+              </div>
+
+              <div class="media-item mb-0">
+                <div class="media-text">
+                  産経マガジンでは、CEOのキャリアや起業の背景、
+                  今後の日本社会における人材のあり方について 掲載されました。
+                </div>
+                <div class="media-logo logo-sankei">
+                  <img
+                    src="./assets/img/media4.png"
+                    alt="NIKKEI"
+                    class="media-logo-img"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="buttons d-flex justify-content-center pt-5">
+            <button class="primary-btn shadow px-5">詳細を表示</button>
+          </div>
+          
+      </div>
+    </section>
+
+    <!-- JS Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-    <!-- Owl Carousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-
-    <!-- Custom JS -->
     <script src="./assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
