feat: update homepage layout and add new images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <!-- Crisis Section -->
-    <section class="crisis-section py-5">
+    <section class="crisis-section">
       <div class="container">
         <div class="sub-head">
           <div class="mb-2 text-danger fw-bold">CRISIS</div>
@@ -233,9 +233,158 @@
         </div>
 
         <div class="buttons d-flex justify-content-center pt-5">
-            <button class="primary-btn shadow px-5">詳細を表示</button>
+          <button class="primary-btn shadow px-5">詳細を表示</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Samurai section -->
+    <section class="samurai-section">
+      <div class="container">
+        <!-- Sub Head -->
+        <div class="sub-head mb-4">
+          <div class="mb-2 text-danger fw-bold">SAMURAI BOOTCAMP</div>
+          <h2 class="fw-bold mb-3 shift-heading">
+            志を持ち、未来を切り拓く人材。
+          </h2>
+          <p class="section-desc">
+            合格率1%未満の厳選。1年間の日本式生活浸入。現場で通じる日本語。
+          </p>
+        </div>
+
+        <div class="mx-auto shift-box-wrapper">
+          <!-- Video Banner -->
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+              title="YouTube video"
+              frameborder="0"
+              allowfullscreen
+            >
+            </iframe>
           </div>
-          
+
+          <!-- Features -->
+          <div class="row g-4 align-items-stretch">
+            <!-- Card 01 -->
+            <div class="col-md-4">
+              <div class="feature-card shadow p-3">
+                <div class="feature-head">
+                  <span class="feature-number">01</span>
+                </div>
+                <div class="feature-body">
+                  <h5 class="fw-bold">厳選された入学</h5>
+                  <p>
+                    合格率1%未満。覚悟と継続力のある人材のみを受け入れます。
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 02 -->
+            <div class="col-md-4">
+              <div class="feature-card shadow p-3">
+                <div class="feature-head">
+                  <span class="feature-number">02</span>
+                </div>
+                <div class="feature-body">
+                  <h5 class="fw-bold">現場没入型教育</h5>
+                  <p>日本式の規律・報連相が「日常」になるまで徹底的に訓練。</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 03 -->
+            <div class="col-md-4">
+              <div class="feature-card shadow p-3">
+                <div class="feature-head">
+                  <span class="feature-number">03</span>
+                </div>
+                <div class="feature-body">
+                  <h5 class="fw-bold">仕事の日本語</h5>
+                  <p>JLPT対策ではなく、現場で使う日本語を習得。</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Talent and Partnership-->
+    <section class="talent-section">
+      <div class="container">
+        <!-- Sub Head -->
+        <div class="sub-head mb-2">
+          <div class="mb-2 text-danger fw-bold">Purpose-Driven HR System</div>
+          <h2 class="fw-bold mb-4">志人事仕組み</h2>
+        </div>
+
+        <div class="grid-wrap">
+            <!-- Talent -->
+        <div class="grid-row">
+            <div class="image-t">
+              <img src="./assets/img/t1.png" alt="Talent" />
+            </div>
+            <div class="content-t">
+              <h3>Talent | サムライ人材 <span>（特定技能）</span></h3>
+              <ul>
+                <li>介護・外食・宿泊・建設・運送</li>
+                <li>コホート型（複数名）配置</li>
+                <li>長期定着を前提とした人材設計</li>
+              </ul>
+            </div>
+          </div>
+  
+          <!-- Support (reversed) -->
+          <div class="grid-row reverse">
+            <div class="image-t">
+              <img src="./assets/img/t2.png" alt="Support" />
+            </div>
+  
+            <div class="content-t">
+              <h3>Support｜定着支援</h3>
+  
+              <p>
+                紹介して終わりではありません。<br />
+                定着と現場の安定まで、私たちが責任を持ちます。
+              </p>
+  
+              <ul>
+                <li>
+                  在留資格：申請・更新を期限管理。入管・監査に耐える記録式運用
+                </li>
+                <li>
+                  生活支援：入国から生活立ち上げまで。相談窓口・緊急時一次対応
+                </li>
+                <li>教育：現場で通じる仕事の日本語と職種別スキル</li>
+                <li>定着：定例確認と早期介入で離職を防止</li>
+                <li>可視化：状況・対応・次アクションを月次で共有</li>
+              </ul>
+  
+              <p>
+                採用は始まりにすぎません。<br />
+                人が残り、積み上がる状態をつくります。
+              </p>
+            </div>
+          </div>
+  
+          <!-- Partnership -->
+          <div class="grid-row">
+            <div class="image-t">
+              <img src="./assets/img/t3.png" alt="Partnership" />
+            </div>
+            <div class="content-t">
+              <h3>Partnership | 育成パートナーシップ</h3>
+              <ul>
+                <li>継続的な人材育成</li>
+                <li>特定技能1号 → 2号 → 技人国</li>
+                <li>外国人を戦力に育成</li>
+                <li>5年・10年単位の人材計画</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
